Add tolerations to GPU config
